<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutored</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_operation">Nuova operazione</string>
    <string name="login_st">Login studente</string>
    <string name="login_tut">Login tutor</string>
    <string name="area_tutor">Area Tutor</string>
    <string name="profile">Profilo</string>
    <string name="calendario_ripetizioni">Calendario Ripetizioni</string>
    <string name="incoming_requests">Richieste in entrata</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tutored">tutored</string>
    <string name="plus_sign_out">Disconnetti</string>
    <string name="prompt_email">Email</string>
    <string name="plus_disconnect">Disconnetti</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="welcome">Benvenuto</string>
    <string name="area_student">Area studente</string>
    <string name="newuser">Nuovo utente</string>
    <string name="facebook_app_id">397063377138176</string>


    <string-array name="student_drawer">
        <item>Home</item>
        <item>Cerca</item>
        <item>Profilo</item>
        <item>Richieste</item>
        <item>Prenotazioni</item>
        <item>Logout</item>
    </string-array>

    <string-array name="tutor_drawer">
        <item>Home</item>
        <item>Profilo</item>
        <item>Materie</item>
        <item>Impostazioni Lezioni</item>

        <item>Prenotazioni</item>
        <item>Logout</item>
    </string-array>



    <!-- array delle opzioni dell'applicazione nel bottom fragment -->

    <string name="title_activity_data_activity_student">DataActivityStudent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help_ab">HelpABActivity</string>
    <string name="drawer_open">Drawer Is Open</string>
    <string name="drawer_close">Drawer Is Close</string>
    <string name="search_hint">Cerca</string>
    <string name="title_activity_search_results">Risultati della Ricerca</string>
    <string name="title_activity_nuova_prenotazione">Nuova Prenotazione</string>
    <string name="gcm_defaultSenderId">420313149585</string>
    <string name="titolorichiesta">Titolo della Richiesta</string>
    <string name="testorichiesta">Testo della Richiesta</string>
    <string name="insertdata">Inserire una data</string>
    <string name="uploadimmagine">Carica Immagine</string>
    <string name="takephoto">Scatta Foto</string>
    <string name="imageselected">Immagine selezionata</string>
    <string name="or">oppure</string>
    <string name="submit">Invia</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="question_registered">Non sei registrato?</string>


    <!--template-->
    <string name="type_msg">Type message</string>


    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="optaggiuntive">Opzioni aggiuntive per le lezioni</string>
    <string name="firstgratis">Prima lezione gratis</string>
    <string name="lessondom">Lezioni a domicilio</string>
    <string name="lessonsede">Lezioni in sede propria</string>
    <string name="lessongroup">Lezioni di gruppo</string>
    <string name="save">Salva</string>
    <string name="student">Studente</string>
    <string name="tutor">Tutor</string>
    <string name="howaccess">Accedi come: </string>
    <string name="slogan">SUPERA CON SUCCESSO IL TUO PROSSIMO ESAME</string>
    <string name="elencoreq">Ecco le richieste degli studenti della tua stessa città:</string>
    <string name="noreq">Nessuna richiesta inserita</string>
    <string name="photo">Foto</string>
    <string name="saveedit">Salva modifiche</string>
    <string name="caricaimmagine">Carica Immagine</string>
    <string name="scattaphoto">Scatta Foto</string>
    <string name="puntualita">Puntualità</string>
    <string name="disp">Disponibilità</string>
    <string name="chiar">Chiarezza</string>
    <string name="finalmark">Voto finale</string>
    <string name="questionadd">Vuoi aggiungere un commento?</string>
    <string name="optional">(Opzionale)</string>
    <string name="addrec">+ Aggiungi recensione</string>
    <string name="cell">Cellulare</string>
    <string name="wherelive">Dove vivi?</string>
    <string name="uni">Università</string>
    <string name="fac">Facoltà</string>
    <string name="accept_term">Accetto Termini e condizioni e informativa sulla privacy Tutored</string>
    <string name="complete_profile">Completa il profilo</string>
    <string name="home">Nome</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="mail">Mail</string>
    <string name="citta">Città</string>
    <string name="repeat_pass">Ripeti Password</string>
    <string name="pass">Password</string>
    <string name="choosefile">Clicca sul tasto qui sotto per scegliere il file</string>
    <string name="choose_gallery">Scegli file da galleria</string>
    <string name="and_upload">e poi clicca upload</string>
    <string name="upload">Upload</string>
    <string name="address">Indirizzo</string>
    <string name="eta">Età</string>
    <string name="add_req">+ Nuova richiesta</string>
    <string name="no_req">Nessuna richiesta inserita</string>
    <string name="mat_tutor">Ecco le materie che hai inserito:</string>
    <string name="add_materia">+ Aggiungi materia</string>
    <string name="no_mat">Nessuna materia inserita</string>
    <string name="comment">Commento</string>
    <string name="string_send_prenotazione">Invia prenotazione</string>
    <string name="tutor_home">Ecco i tutor della tua stessa città:</string>
    <string name="no_tutor">Nessun tutor trovato</string>
    <string name="oldpsw">Vecchia password</string>
    <string name="newpsw">Nuova password</string>
    <string name="newpsw2">Ripeti Password</string>
    <string name="conferma">Conferma</string>
    <string name="old_password">Vecchia Password</string>
    <string name="string_data">Data</string>
    <string name="aggiorna_prenotazione">Aggiorna Prenotazione</string>
    <string name="prenotazione_conferma">Conferma Prenotazione</string>
    <string name="tutor_home_string">Richieste dagli studenti della tua citta\'</string>
    <string name="commento_recensione">Commento</string>
    <string name="universita">Università</string>
    <string name="facolta">Facoltà</string>
    <string name="distanza">Distanza</string>

</resources>
