<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"

        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choosefile"
                android:id="@+id/textView14"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp" />

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_gallery"
                android:background="@drawable/smooth_button"
                android:textColor="@color/white"
                android:textStyle="bold"

                android:id="@+id/browseB"
                android:layout_below="@+id/textView14"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/and_upload"
                android:id="@+id/textView15"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/urlFoto"
                android:layout_alignRight="@+id/photoButton" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/upload"
                android:background="@drawable/smooth_button"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/up_24"
                android:paddingLeft="7dp"
                android:paddingRight="9dp"
                android:id="@+id/uplB"
                android:layout_marginTop="62dp"
                android:layout_below="@+id/textView15"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:id="@+id/urlFoto"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/photoButton"
                android:layout_marginTop="20dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge"
                android:layout_alignTop="@+id/uplB"
                android:layout_alignRight="@+id/uplB" />

            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/takephoto"
                android:background="@drawable/smooth_button"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/photoButton"
                android:layout_below="@+id/textView16"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/or"
                android:id="@+id/textView16"
                android:layout_below="@+id/browseB"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
</LinearLayout>
</ScrollView>