<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- A CardView that contains a TextView -->

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/book_128"
        android:alpha="0.3"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mat_tutor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:id="@+id/phr"/>



    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/materie_list"
        android:choiceMode="singleChoice"
        android:layout_below="@id/phr"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#cccc"
        android:layout_marginBottom="80dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_materia"
        android:id="@+id/buttonAddMateria"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/smooth_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/phr"
        android:layout_marginBottom="10dp" />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarMaterie"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_mat"
        android:id="@+id/nomaterieT"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp" />



</RelativeLayout>