<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:float="http://schemas.android.com/apk/res-auto">


    <LinearLayout android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"

        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="650dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/puntualita"
                android:textColor="@color/primaryColor"
                android:id="@+id/textView21"
                android:layout_marginTop="28dp"
                android:layout_below="@+id/textNome"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""

                android:textStyle="bold"
                android:id="@+id/textNome"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/puntual"

                android:layout_below="@+id/textView21"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_128"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:alpha="0.3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/disp"
                android:textColor="@color/primaryColor"
                android:id="@+id/textView22"
                android:layout_below="@+id/puntual"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/disp"

                android:layout_below="@+id/textView22"
                android:layout_alignLeft="@+id/puntual" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/chiar"
                android:textColor="@color/primaryColor"
                android:id="@+id/textView23"
                android:layout_below="@+id/disp"
                android:layout_alignRight="@+id/textView21" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chiar"
                android:layout_below="@+id/textView23"
                android:layout_alignLeft="@+id/disp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/finalmark"
                android:textColor="@color/primaryColor"
                android:id="@+id/textView24"
                android:layout_below="@+id/chiar"
                android:layout_alignLeft="@+id/textView23" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/finale"
                android:layout_below="@+id/textView24"
                android:layout_alignLeft="@+id/chiar" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/addrec"
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/addRec"
                android:background="@drawable/smooth_button"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_below="@+id/view2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="54dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge"
                android:layout_alignTop="@+id/addRec"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp" />



            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                float:fletPaddingLeft="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/finale"
                android:layout_alignLeft="@+id/textView24"
                android:id="@+id/view2">

                <EditText
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"

                    android:drawablePadding="5dp"
                    android:inputType="textMultiLine"
                    android:hint="Commento"
                    android:drawableLeft="@drawable/comments_32"
                    android:id="@+id/comment"
                    android:layout_marginLeft="190dp"
                    android:layout_marginTop="-43dp" />


            </com.wrapp.floatlabelededittext.FloatLabeledEditText>



        </RelativeLayout>
    </LinearLayout>

</ScrollView>